[package]
name = "pakman"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "File compression(zip) PAcKaging MANager"
readme = "README.md"
keywords = ["zip", "package"]
categories = ["command-line-utilities"]
repository = "https://github.com/robinbreast/pakman"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
clap = { version = "3.0.14", features = ["derive"]}
serde = { version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
walkdir = "2"
zip = "0.6.2"
chrono = "0.4"